Initial commit: Add diary website with dark mode

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 </head>
 <body>
     <header>
-        <h1>Daily Reflections</h1>
+        <h1>Reflections</h1>
         <button id="theme-toggle" aria-label="Toggle theme"></button>
     </header>
 
