--- a/entries/hello-world.html
+++ b/entries/hello-world.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reflections</title>
+    <title>Hello World - Reflections</title>
     <style>
         body {
             font-family: system-ui, -apple-system, sans-serif;
@@ -40,11 +40,11 @@
     </style>
 </head>
 <body>
-    <h1>Reflections</h1>
+    <h1>Hello World</h1>
     
     <nav>
-        <a href="index.html">Home</a>
-        <a href="archive.html">Archive</a>
+        <a href="../index.html">Home</a>
+        <a href="../archive.html">Archive</a>
     </nav>
 
     <main>
