--- a/archive.html
+++ b/archive.html
@@ -18,6 +18,7 @@
 ::: {role="main"}
 
 -   [November 27, 2024]{.entry-date} [Hello World](entries/hello-world.html){.entry-title}
+-   [November 27, 2024]{.entry-date} [Hello World](entries/hello-world.html){.entry-title}
 :::
 
 © 2024 Akanksha Yadav. All rights reserved.
