--- a/entries/getting-over-my-awkward-reclusiveness-in-pockets-of-invitations.html
+++ b/entries/getting-over-my-awkward-reclusiveness-in-pockets-of-invitations.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reflections</title>
-    <link rel="stylesheet" href="assets/styles.css">
+    <title>Getting over my awkward reclusiveness in pockets of invitations</title>
+    <link rel="stylesheet" href="../assets/styles.css">
 </head>
 <body>
     <button id="theme-toggle" aria-label="Toggle theme"></button>
-
+    
     <header>
         <h1>Reflections</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="archive.html">Archive</a>
+            <a href="../index.html">Home</a>
+            <a href="../archive.html">Archive</a>
         </nav>
     </header>
 
