--- a/archive.html
+++ b/archive.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
-<head>
-   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-J0T7HV6YV9"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+        <html lang="en" data-theme="dark">
+        <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-J0T7HV6YV9"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
 
-  gtag('config', 'G-J0T7HV6YV9');
-</script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Archive - Reflections</title>
-    <link rel="stylesheet" href="assets/styles.css">
-</head>
+          gtag('config', 'G-J0T7HV6YV9');
+        </script>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Archive - Reflections</title>
+            <link rel="stylesheet" href="assets/styles.css">
+        </head>
 <body>
     <button id="theme-toggle" aria-label="Toggle theme"></button>
 
@@ -23,6 +23,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="archive.html">Archive</a>
+            <div class="gcse-search"></div>
         </nav>
     </header>
 
@@ -275,6 +276,8 @@
     <footer>
         <p>© 2024 Akanksha Yadav. All rights reserved.</p>
     </footer>
+
+    <script async src="https://cse.google.com/cse.js?cx=d1edfe92b739048ed"></script>
 
     <script>
         document.getElementById('theme-toggle').addEventListener('click', () => {
