--- a/archive.html
+++ b/archive.html
@@ -23,6 +23,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="archive.html">Archive</a>
+            <div class="gcse-searchresults-only"></div>
         </nav>
     </header>
 
